JRE instructions added to README.md